# supply-mind

./: .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  SKILL.md  claude_desktop_config.example.json  pyproject.toml
.claude/skills/supplymind/: SKILL.md
datasets/retail_grocery/: README.md  inventory_snapshot.csv  sample_demand.csv  sku_master.csv
pipelines/: manufacturing-mrp.yaml  markdown-clearance.yaml  new-store-launch.yaml  promo-planning.yaml  retail-replenish.yaml
supplymind/: __init__.py  __main__.py  cli.py
supplymind/adapters/: __init__.py  langchain_tool.py
supplymind/agent/: __init__.py  orchestrator.py  tools.py
supplymind/agent/skill_handlers/: __init__.py  common.py  demand.py  fulfillment.py  inventory.py  pricing.py
supplymind/benchmark/: __init__.py
supplymind/core/: __init__.py  classification.py  fulfillment_models.py  inventory_models.py  optimization.py  pricing_models.py  statistics.py  timeseries.py
supplymind/dashboard/: __init__.py  server.py
supplymind/dashboard/static/: index.html
supplymind/datasets/: __init__.py
supplymind/enterprise/: __init__.py
supplymind/hitl/: __init__.py  confidence.py  engine.py  feedback.py  store.py
supplymind/learning/: __init__.py  backtest.py  evolution.py  loop.py
supplymind/mcp/: __init__.py  server.py
supplymind/memory/: __init__.py  domain.py  meta.py  store.py  working.py
supplymind/pipelines/: __init__.py  engine.py
supplymind/protocol/: __init__.py  adapter.py  schema.py  validators.py
supplymind/skills/: __init__.py
supplymind/skills/common/: __init__.py
supplymind/skills/demand/: __init__.py
supplymind/skills/fulfillment/: __init__.py
supplymind/skills/inventory/: __init__.py
supplymind/skills/pricing/: __init__.py
tests/: __init__.py  test_agent_tools.py  test_audit.py  test_benchmark.py  test_core.py  test_datasets.py  test_learning_integration.py  test_mcp.py  test_orchestrator.py  test_phase2.py  test_phase3.py  test_protocol.py  test_skills.py
(+93 files in other folders)
