[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supplymind"
version = "0.1.0"
description = "A self-improving, skill-based supply chain planning agent framework with human-in-the-loop"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "SupplyMind Contributors"},
]
keywords = ["supply-chain", "agent", "forecasting", "inventory", "planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "click>=8.1.0",
    "pydantic>=2.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
prophet = ["prophet>=1.1.0"]
visualization = ["matplotlib>=3.7.0"]
mcp = ["mcp>=1.0.0"]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
all = [
    "supplymind[prophet,visualization,mcp,dev]",
]

[project.scripts]
supplymind = "supplymind.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["supplymind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["supplymind"]
